修改了数据库配置文件，加入了自动回收连接配置和检测是否失效配置